Añadido cerrar sesion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,5 @@
     <string name="server_cert_asset_name">master-cacert.pem</string>
     <string name="client_cert_file_name">client-cert.p12</string>
     <string name="client_cert_password">proyecto</string>
-
+    <string name="logout">Cerrar sesión</string>
 </resources>
